--- a/MyHomeApp/src/main/webapp/app/incidences/create/create-incidence.component.html
+++ b/MyHomeApp/src/main/webapp/app/incidences/create/create-incidence.component.html
@@ -76,6 +76,18 @@
         </div>
 
         <div class="mb-3">
+          <label class="form-label" for="priority" jhiTranslate="incidences.form.priority.label" >Prioridad</label>
+          <select class="form-control" id="priority" name="priority" formControlName="priority" data-cy="priority" >
+            <option *ngFor="let priority of prioritiesStatus" [value]="priority">{{ ('incidences.priority.priority_incidence.' + priority) | lowercase | translate }}</option>
+          </select>
+          <div *ngIf="incidenceForm.get('priority')!.invalid && (incidenceForm.get('priority')!.dirty || incidenceForm.get('priority')!.touched)">
+            <small class="form-text text-danger" *ngIf="incidenceForm.get('priority')?.errors?.required" jhiTranslate="incidences.messages.validate.priority.required">
+                Este campo es obligatorio.
+            </small>
+          </div>
+        </div>
+
+        <!-- <div class="mb-3">
             <label class="form-label" for="photos" jhiTranslate="incidences.form.photos.label" >Photos</label>
             <div class="row" id="photos">
               <div class="col-4">
@@ -99,9 +111,7 @@
                   Este campo es obligatorio.
               </small>
             </div>
-           
-
-        </div>
+        </div> -->
 
         <div class="form-group">
             <label class="form-label" for="longitude" jhiTranslate="incidences.form.longitude.label">Longitud</label>
