--- a/MyHomeApp/src/main/webapp/app/map-city/incidence/create-incidence-modal/create-incidence-modal.component.html
+++ b/MyHomeApp/src/main/webapp/app/map-city/incidence/create-incidence-modal/create-incidence-modal.component.html
@@ -97,7 +97,7 @@
             </div>
 
             <div class="mb-3">
-              <label class="form-label" for="priority" jhiTranslate="incidences.form.priority.label" >Estado</label>
+              <label class="form-label" for="priority" jhiTranslate="incidences.form.priority.label" >Prioridad</label>
               <select class="form-control" id="priority" name="priority" formControlName="priority" data-cy="priority" >
                 <option *ngFor="let priority of prioritiesStatus" [value]="priority">{{ ('incidences.priority.priority_incidence.' + priority) | lowercase | translate }}</option>
               </select>
