--- a/MyHomeApp/src/main/webapp/app/incidences/list/list-incidence.component.html
+++ b/MyHomeApp/src/main/webapp/app/incidences/list/list-incidence.component.html
@@ -10,7 +10,7 @@
         <!-- <button class="btn btn-primary jh-create-entity" [routerLink]="['/incidences/create']">
           <fa-icon icon="plus"></fa-icon> <span jhiTranslate="incidences.list.createLabel">Crear una nueva organización</span>
         </button> -->
-        <button class="btn btn-info jh-create-entity" [routerLink]="['/incidences/status']">
+        <button class="btn btn-info jh-create-entity" [routerLink]="['/incidences/kanban']">
           <i class="bi bi-bar-chart"></i> Kanban's status
         </button>
       </div>
