Se cambia la pagina de inicio

--- a/MyHomeApp/src/main/webapp/app/home/home.component.html
+++ b/MyHomeApp/src/main/webapp/app/home/home.component.html
@@ -1,4 +1,22 @@
+<!-- <div class="row">
+  <div class="col-12">
+    <h1 class="display-4">
+      <span jhiTranslate="home.title"></span>
+    </h1>
+    <p class="lead" jhiTranslate="home.subtitle"></p>
+  </div>
+</div> -->
 <div class="row">
+
+  <div class="col-12">
+    <img src="../../content/images/main-home.png" class="img-fluid-responsible" alt="...">
+    <!-- <span class="main-home img-fluid rounded"></span> -->
+  </div>
+
+</div>
+
+<!--<div class="row">
+   
   <div class="col-md-3">
     <span class="hipster img-fluid rounded"></span>
   </div>
@@ -75,4 +93,6 @@
       >!
     </p>
   </div>
+  
 </div>
+ -->
