--- a/MyHomeApp/src/main/webapp/app/home/home.component.scss
+++ b/MyHomeApp/src/main/webapp/app/home/home.component.scss
@@ -2,6 +2,12 @@
 Main page styles
 ========================================================================== */
 
+.img-fluid-responsible{
+  width: 100%;
+  height: auto;
+}
+
+
 .hipster {
   display: inline-block;
   width: 347px;
